# MLPH

./: .gitignore  01-train-and-optimize.py  02-cg.py  03-bp.py  README.md  lm.param  svm.param
BP/: CMakeLists.txt  README.md  analyze.py  gprocessed.txt  make_figure_curve.py  make_table.py  utils.py
BP/cmake/: FindGurobi.cmake
BP/src/: cg.cpp  cg.h  main.cpp
BP/src/BP/: branch_coloring.h  branch_strongcoloring.c  branch_strongcoloring.h  coloringplugins.c  coloringplugins.h  cons_storeGraph.c  cons_storeGraph.h  heur_init.cpp  heur_init.h  probdata_coloring.c  probdata_coloring.h  reader_col.h  reader_csol.h
BP/src/BP/my_tclique/: tclique.h  tclique_branch.c  tclique_coloring.c  tclique_coloring.h  tclique_def.h  tclique_graph.c
BP/src/pricing/: ACO.cpp  ACO.h  MLPH.cpp  MLPH.h  exact_pricer.cpp  exact_pricer.h  heur_pricer_misc.cpp  heur_pricer_misc.h  init_random.cpp  init_random.h  mwisp_inst.cpp  mwisp_inst.h  pricer.cpp  pricer.h
BP/src/pricing/mwcq_solvers/: fastwclq.cpp  fastwclq.hpp  lscc.cpp  lscc.hpp  tsm.cpp  tsm.hpp
CG/: CMakeLists.txt  README.md  analyze.py  make_cg_table.py  make_compare_table.py  make_gstats_table.py  make_heuristic_cg_relation_table.py  make_rc_table.py  make_solving_table.py  num_col_analyze.py  rescale_time.py  utils.py
CG/src/: ACO.cpp  ACO.h  CG.cpp  CG.h  MLPH.cpp  MLPH.h  MWCP_solver.cpp  MWCP_solver.h  instance.cpp  instance.h  main.cpp  pricer.cpp  pricer.h  training.cpp  training.h
CG/src/mwcq_solvers/: fastwclq.cpp  fastwclq.hpp  lscc.cpp  lscc.hpp  tsm.cpp  tsm.hpp
CG/train_data/: svm_train_model
GCB/: 1-Insertions_6.sol  3-FullIns_4.sol  DSJC1000.9.sol  DSJC125.5.sol  DSJC250.1.sol  flat300_20_0.col  flat300_20_0.sol  flat300_26_0.col  flat300_26_0.sol  mug88_25.sol  queen11_11.sol  queen12_12.sol  r1000.1.col  r1000.5.col  r125.1.col  r125.1c.col  r125.5.col  r250.1.col  r250.5.col
